--- a/docs/buzon-sugerencias-styles.css
+++ b/docs/buzon-sugerencias-styles.css
@@ -244,6 +244,25 @@
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
 }
 
+.form-embed {
+  border-radius: var(--border-radius);
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  position: relative;
+  padding-bottom: 100%; /* Aspect ratio 16:9 */
+  height: 0;
+  overflow: hidden;
+}
+
+.form-embed iframe {
+  border-radius: var(--border-radius);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 .form-header {
   text-align: center;
   margin-bottom: var(--spacing-xl);
@@ -460,6 +479,7 @@
   justify-content: center;
   gap: var(--spacing-xl);
   margin-top: var(--spacing-lg);
+  align-items:center;
 }
 
 .contact-method {
